-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.1
-
None
-
-
c768ec64b (dev)
-
2024wk36s2FOQtforAndroid
At the moment the placeholder variable "INSERT_APP_NAME" in the AndroidManifest.xml is replaced by the "TARGET". This makes problems when the app name contains spaces or special characters. Instead there should exist a variable to define the app name independently (very much like the "ANDROID_VERSION_CODE" variable for the version code).
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-87982 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
589290,3 | CMake:Android: add property QT_ANDROID_APP_NAME to set app name | dev | qt/qtbase | Status: MERGED | +2 | 0 |