CMake:Android: add property QT_ANDROID_APP_NAME to set app name

With this property, a user can set the app's name directly from CMake
without having to manaully manage a custom AndroidManifest.xml file.

Fixes: QTBUG-87982
Fixes: QTBUG-121825
Fixes: QTCREATORBUG-17863
Change-Id: Ic12e13b58efbc4fb2f18be6fc854b585988485bf
Reviewed-by:  Alexey Edelev <alexey.edelev@qt.io>